# SampleCode

./: CMakeLists.txt  README.md
docs/: Tutorial.md
include/sysy/: CMakeLists.txt  SysyDialect.h  SysyDialect.td  SysyLower.h  SysyLower.td  SysyOps.h  SysyOps.td  SysyOpt.h
lib/: CMakeLists.txt
lib/sysy/: CMakeLists.txt  SysyDialect.cpp  SysyLower.cpp  SysyOpt.cpp
tests/: add.mlir  constant.mlir  matmul-tensor.mlir  matmul.mlir  sub.mlir
tools/: CMakeLists.txt  driver.cpp
